c2prj1_cards/grade.txt
Grading at Thu Mar 26 01:58:46 UTC 2020
Compiling cards.c
cards.c: In function ‘value_letter’:
cards.c:44:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cards.c: In function ‘suit_letter’:
cards.c:55:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
